tests/init_state/borrow_precondition/uninit_borrow_of_init_non_drop.sim
# Linear payload → no drop to insert → precondition failure.
struct Linear { r: &out i64 }
fn f(x: Linear) {
  rr: &uninit Linear;
  entry:
    rr = &uninit x;
    return
}
